--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,4 +2,4 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home2/gulugame/public_html/dmvboardgames
-    - /bin/cp -R . $DEPLOYPATH
+    - /bin/cp -r * $DEPLOYPATH
