--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,4 +2,5 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home2/gulugame/public_html/dmvboardgames
+    - /bin/cp -r index.html $DEPLOYPATH
     - /bin/cp -r * $DEPLOYPATH
